# Elysium

./: .dockerignore  .gitignore  Dockerfile  README.md  dump.rdb  elysium_tui.py  main.py  pyproject.toml  requirements.txt
AI/Cloud/Groq/: groq_ai.py
AI/Local/: qwen.py
AI/Tools/: email.py  file_ops.py
Database/Schema/Email/: email_schema.py
Elysium_Celery/: config.py  tasks.py
Elysium_Cli/: __init__.py
Elysium_Cli/Cli/: __init__.py  cli.py  styles.tcss
Elysium_Config/Ai/: config_groq.py
Elysium_Config/Email/: email_config.py
Elysium_back_up/: main.py
Modules/: hellomodule.c  setup.py  test.py
Sentinel/: dir.json  ignore.json  sentinial_v1.py  todo.md  watcher.py
Tools/Hyper/: hyper_health.py
Tools/Progress_bar/: smooth_bar.py
Tools/elysium/: elysium.py
WEB/: TODO.md  index.html  package-lock.json  tailwind.config.js
WEB/src/: App.tsx  ChatPage.tsx  index.css
WEB/src/api/: elysiumApi.ts
WEB/src/context/: NavigationContext.tsx
api/v1/: __init__.py
api/v1/Hyper_status/: hyper_stats.py
api/v1/Test_workers/: workers_test.py
api/v1/ai/: ai_chat.py
api/v1/email/: __init__.py  email.py
api/v1/server_status/: server_health.py
api/v1/websocket/: laptop_price.py
assets/Elysium/: branding.txt  restarting.txt  shutdown.txt  start_up.py
assets/Watcher/: eye.txt
assets/Workers/: worker.txt
services/Email/: email_service.py
services/Server_Dir_check/: server_file_integrety.py
services/Voice_To_Text/: transcriber.py
services/elysium_server/: restart.py
