[project]
name = "elysium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "celery>=5.6.2",
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "redis>=7.2.1",
    "requests>=2.32.5",
]
