[project]
name = "elysium"
version = "0.1.0"
description = "Home_server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "celery>=5.6.2",
    "fastapi[standard]>=0.135.1",
    "faster-whisper>=1.2.1",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "numpy>=2.4.3",
    "pyaudio>=0.2.14",
    "redis>=7.2.1",
    "requests>=2.32.5",
    "setuptools>=82.0.1",
    "sounddevice>=0.5.5",
    "webrtcvad>=2.0.10",
    "webrtcvad-wheels>=2.0.14",
]
